msg done falta os collects e merads de chaves aosidfasf